--- a/package.json
+++ b/package.json
@@ -3,27 +3,38 @@
   "name": "ampreact",
   "version": "2.1.0",
   "description": "React AMP starter",
-  "main": "",
   "scripts": {
-    "dev": "node server.js",
-    "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "dev": "bnr dev",
+    "build": "bnr build",
+    "start": "bnr start",
     "lint": "eslint -c ./package.json ./pages server.js"
+  },
+  "betterScripts": {
+    "start": {
+      "command": "node server.js",
+      "env": {
+        "NODE_ENV": "production"
+      }
+    },
+    "dev": {
+      "command": "node server.js",
+      "env": {
+        "NODE_ENV": "development"
+      }
+    },
+    "build": {
+      "command": "next build",
+      "env": {
+        "NODE_ENV": "production"
+      }
+    }
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/antonybudianto/ampreact.git"
   },
-  "keywords": [
-    "amp",
-    "react"
-  ],
   "author": "Antony Budianto <antonybudianto@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/antonybudianto/ampreact/issues"
-  },
-  "homepage": "https://github.com/antonybudianto/ampreact#readme",
   "devDependencies": {
     "babel-eslint": "10.0.1",
     "babel-plugin-styled-components": "1.8.0",
@@ -34,8 +45,9 @@
     "eslint-plugin-react": "7.11.1"
   },
   "dependencies": {
-    "next": "~7.0.1",
+    "better-npm-run": "^0.1.1",
     "express": "~4.16.3",
+    "next": "~7.0.1",
     "react": "~16.5.2",
     "react-amphtml": "3.0.1",
     "react-dom": "~16.5.2",
