--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": {
       "command": "node server.js",
       "env": {
-        "NODE_ENV": "production"
+        "NODE_ENV": "production",
+        "APP_ENV": "production"
       }
     },
     "dev": {
